[gd_scene load_steps=2 format=3 uid="uid://cjdw1usajap"]

[ext_resource type="Script" path="res://addons/creators_tool_kit/itch/itch.gd" id="1_7rt8c"]

[node name="Itch" type="Popup"]
title = "Itch Options"
size = Vector2i(800, 350)
visible = true
wrap_controls = false
exclusive = true
borderless = false
popup_window = false
script = ExtResource("1_7rt8c")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.439216, 0.690196, 0.611765, 1)

[node name="title" type="Label" parent="."]
offset_top = 10.0
offset_right = 800.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 50
text = "Itch"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 50.0
offset_top = 100.0
offset_right = 750.0
offset_bottom = 194.0

[node name="itch" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_right = 700.0
offset_bottom = 45.0

[node name="Label" type="Label" parent="VBoxContainer/itch"]
layout_mode = 2
offset_right = 239.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 30
text = "Sign in into itch: "

[node name="itchSignIn" type="Button" parent="VBoxContainer/itch"]
layout_mode = 2
offset_left = 243.0
offset_right = 469.0
offset_bottom = 45.0
size_flags_horizontal = 3
text = "Sign in"

[node name="itchLogout" type="Button" parent="VBoxContainer/itch"]
layout_mode = 2
offset_left = 473.0
offset_right = 700.0
offset_bottom = 45.0
size_flags_horizontal = 3
text = "Logout"

[node name="export" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 49.0
offset_right = 700.0
offset_bottom = 94.0

[node name="Label" type="Label" parent="VBoxContainer/export"]
layout_mode = 2
offset_right = 212.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 30
text = "Export to itch: "

[node name="export" type="Button" parent="VBoxContainer/export"]
layout_mode = 2
offset_left = 216.0
offset_right = 700.0
offset_bottom = 45.0
size_flags_horizontal = 3
text = "Export"

[node name="chooseFile" type="FileDialog" parent="VBoxContainer/export"]
title = "Choose folder with executables"
position = Vector2i(100, 62)
size = Vector2i(600, 400)
exclusive = false
popup_window = true
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
show_hidden_files = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 98.0
offset_right = 700.0
offset_bottom = 129.0

[node name="username" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_right = 342.0
offset_bottom = 31.0
size_flags_horizontal = 3
placeholder_text = "Itch.io Username"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_left = 346.0
offset_right = 354.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 20
text = "/"

[node name="gamename" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_left = 358.0
offset_right = 700.0
offset_bottom = 31.0
size_flags_horizontal = 3
placeholder_text = "Itch.io Game Name"

[node name="exportLbl" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
offset_top = 98.0
offset_right = 700.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/itch/itchSignIn" to="." method="_on_itch_sign_in_pressed"]
[connection signal="pressed" from="VBoxContainer/itch/itchLogout" to="." method="_on_itch_logout_pressed"]
[connection signal="pressed" from="VBoxContainer/export/export" to="." method="_on_export_pressed"]
[connection signal="dir_selected" from="VBoxContainer/export/chooseFile" to="." method="_on_choose_file_dir_selected"]
